Tests/NegativeCompileTestsRunner/configurations.swift
//
// Created by Andreas Bauer on 02.06.21.
//

/// This file holds the global configurations used by the `NegativeTestRunner`.
/// It defines which target are executed and optionally restricts what
/// test cases of a target are executed.
let configurations: TestRunnerConfiguration = [
    .target("ApodiniNegativeCompileTests")
]
